--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
-  "name": "You Need Music",
+  "name": "WD SED Music",
   "description": "A simple Telegram bot to download music.",
   "keywords": [
     "bot",
     "music",
     "music downloader"
   ],
-  "repository": "https://github.com/rozari0/NeedMusicRobot/",
-  "website": "https://t.me/NeedMusicRobot",
-  "success_url": "https://t.me/NeedMusicRobot",
+  "repository": "https://github.com/angel-loveyou/testmusic/",
+  "website": "https://t.me/Opleech",
+  "success_url": "https://t.me/WOODcraft_Mirror_Topic",
   "env": {
     "API_ID": {
       "description": "Your Telegram API ID",
