--- a/sample_config.env
+++ b/sample_config.env
@@ -1,17 +1,17 @@
-API_ID=
+API_ID= "1701392" #get api_id and api_hash from my.telegram.org
 
-API_HASH=""
+API_HASH= "96089a340f2892fd06aea683cbfb73c0"
 
-BOT_TOKEN=""
+BOT_TOKEN= "6273622175:AAE2vAdogC2yIx9gI_fRKOKTsp9EMutZ2hY" #your telegram bot token 
 
-OWNER_ID = "" #ID of the owner of the bot (not username)
+OWNER_ID = "5827766615" #ID of the owner of the bot (not username)
 
-SUDO_USERS = "" # Users With God Permission (Separate Them With space)
+SUDO_USERS = "5827766615" # Users With God Permission (Separate Them With space)
 
-AUTH_CHATS = "" # Chats that can use the bot (Separate them with space)
+AUTH_CHATS = "-1001961465245" # Chats that can use the bot (Separate them with space)
 
-LOG_GROUP = "" # Group ID for the log channel
+LOG_GROUP = "-1002126211125" # Group ID for the log channel or leave it empty if not required 
 
-SPOTIPY_CLIENT_SECRET = "" #Spotify Client Secret
+SPOTIPY_CLIENT_SECRET = "c34ea4079da841b5a8f47d0ab091708d" #Spotify Client Secret
 
-SPOTIPY_CLIENT_ID = "" #Spotify Client ID
+SPOTIPY_CLIENT_ID = "b64b747e25794190b46c83e6bb31d5ee" #Spotify Client ID
